Update coturn related parameters in .env and scripts. Remove upgrade from enterprise ha

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -353,6 +353,19 @@ ELASTICSEARCH_PASSWORD=
 # Documentation: https://doc-kurento.readthedocs.io/en/stable/features/logging.html
 # KMS_DOCKER_ENV_GST_DEBUG=
 
+# Coturn deployment in media nodes (Experimental)
+# --------------------------
+# OpenVidu PRO/Enterprise includes a default TURN/STUN deployment (Coturn).
+# By default, Coturn is deployed in master nodes, but if you want to deploy
+# Coturn in the media nodes, you just need to set OPENVIDU_PRO_COTURN_IN_MEDIA_NODES=true
+# Default value is OPENVIDU_PRO_COTURN_IN_MEDIA_NODES=false
+# For Coturn to work, you need at least this ports open:
+# For master node you need 3478 TCP/UDP open in the master node.
+# For Media nodes you need 443 TCP/UDP open in media nodes.
+# More info about Coturn configuration in OpenVidu PRO/ENTERPRISE:
+#    - https://docs.openvidu.io/en/stable/deployment/pro/on-premises/#coturn-configuration
+OPENVIDU_PRO_COTURN_IN_MEDIA_NODES=false
+
 # Cloudformation configuration
 # --------------------------
 # If you're working outside AWS ignore this section
