--- a/openvidu-components-angular/projects/openvidu-angular/package.json
+++ b/openvidu-components-angular/projects/openvidu-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openvidu-angular",
-  "version": "2.22.0-beta2",
+  "version": "2.22.0",
   "peerDependencies": {
     "@angular/animations": "^13.0.0",
     "@angular/common": "^13.0.0",
@@ -10,7 +10,7 @@
     "@angular/flex-layout": "^13.0.0-beta.36",
     "autolinker": "^3.14.3",
     "buffer": "^6.0.3",
-    "openvidu-browser": "^2.21.0"
+    "openvidu-browser": "2.22.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
