--- a/.github/workflows/openvidu-components-angular-E2E.yml
+++ b/.github/workflows/openvidu-components-angular-E2E.yml
@@ -23,7 +23,14 @@ jobs:
     - name: Run Selenium Chromedriver
       run: docker run -d --shm-size="2g" --network host selenium/standalone-chrome:latest
     - name: Run openvidu-server-kms
-      run: docker run -p 4443:4443 --rm -d -e OPENVIDU_SECRET=MY_SECRET openvidu/openvidu-server-kms:latest
+      run: |
+        docker run -p 4443:4443 --rm -d \
+        -e OPENVIDU_SECRET=MY_SECRET \
+        -e OPENVIDU_RECORDING=true \
+        -e OPENVIDU_RECORDING_PATH=/home/openvidu/recordings \
+        -v /var/run/docker.sock:/var/run/docker.sock \
+        -v /home/openvidu/recordings:/home/openvidu/recordings \
+        openvidu/openvidu-server-kms:latest
     - name: Build openvidu-browser
       run: |
         cd openvidu-browser
