ci: Use paths-ignore instead of paths

--- a/.github/workflows/openvidu-ce-test.yml
+++ b/.github/workflows/openvidu-ce-test.yml
@@ -1,10 +1,10 @@
 name: OpenVidu CE Tests
 on:
   push:
-    paths:
-      - '!openvidu-components-angular/**'
-      - '!openvidu-server/docker/**'
-      - '!openvidu-server/deployments/**'
+    paths-ignore:
+      - 'openvidu-components-angular/**'
+      - 'openvidu-server/docker/**'
+      - 'openvidu-server/deployments/**'
   pull_request:
     branches:
       - master
