--- a/.github/workflows/openvidu-ce-test.yml
+++ b/.github/workflows/openvidu-ce-test.yml
@@ -52,14 +52,14 @@ jobs:
         - /opt/openvidu:/opt/openvidu
     env:
       KURENTO_SNAPSHOTS_URL: ${{ secrets.KURENTO_SNAPSHOTS_URL }}
-      KURENTO_MEDIA_SERVER_IMAGE: ${{ github.event.inputs.KURENTO_MEDIA_SERVER_IMAGE || github.event.inputs.KURENTO_MEDIA_SERVER_IMAGE.default }}
-      MEDIASOUP_CONTROLLER_VERSION: ${{ github.event.inputs.MEDIASOUP_CONTROLLER_VERSION || github.event.inputs.MEDIASOUP_CONTROLLER_VERSION.default }}
-      KURENTO_JAVA_COMMIT: ${{ github.event.inputs.KURENTO_JAVA_COMMIT || github.event.inputs.KURENTO_JAVA_COMMIT.default }}
-      DOCKER_RECORDING_VERSION: ${{ github.event.inputs.DOCKER_RECORDING_VERSION || github.event.inputs.DOCKER_RECORDING_VERSION.default }}
-      CHROME_VERSION: ${{ github.event.inputs.CHROME_VERSION || github.event.inputs.CHROME_VERSION.default }}
-      FIREFOX_VERSION: ${{ github.event.inputs.FIREFOX_VERSION || github.event.inputs.FIREFOX_VERSION.default }}
-      OPERA_VERSION: ${{ github.event.inputs.OPERA_VERSION || github.event.inputs.OPERA_VERSION.default }}
-      EDGE_VERSION: ${{ github.event.inputs.EDGE_VERSION || github.event.inputs.EDGE_VERSION.default }}
+      KURENTO_MEDIA_SERVER_IMAGE: ${{ github.event.inputs.KURENTO_MEDIA_SERVER_IMAGE || 'kurento/kurento-media-server:dev-6.18.0' }}
+      MEDIASOUP_CONTROLLER_VERSION: ${{ github.event.inputs.MEDIASOUP_CONTROLLER_VERSION || 'master' }}
+      KURENTO_JAVA_COMMIT: ${{ github.event.inputs.KURENTO_JAVA_COMMIT || 'master' }}
+      DOCKER_RECORDING_VERSION: ${{ github.event.inputs.DOCKER_RECORDING_VERSION || 'default' }}
+      CHROME_VERSION: ${{ github.event.inputs.CHROME_VERSION || 'latest' }}
+      FIREFOX_VERSION: ${{ github.event.inputs.FIREFOX_VERSION || 'latest' }}
+      OPERA_VERSION: ${{ github.event.inputs.OPERA_VERSION || 'latest' }}
+      EDGE_VERSION: ${{ github.event.inputs.EDGE_VERSION || 'latest' }}
     steps:
       - uses: actions/checkout@v2
       - name: Setting up CI
