ci: Only listen on push master branch and PRs to master

--- a/.github/workflows/openvidu-ce-test.yml
+++ b/.github/workflows/openvidu-ce-test.yml
@@ -1,6 +1,8 @@
 name: OpenVidu CE Tests
 on:
   push:
+    branches:
+      - master
     paths-ignore:
       - 'openvidu-components-angular/**'
       - 'openvidu-server/docker/**'
