openvidu-components: Added admin dashboard

--- a/openvidu-components-angular/projects/openvidu-angular/doc/tsconfig.doc.json
+++ b/openvidu-components-angular/projects/openvidu-angular/doc/tsconfig.doc.json
@@ -1,5 +1,6 @@
 {
 	"include": [
+		"../src/lib/admin/**/*.ts",
 		"../src/lib/components/**/*.ts",
 		"../src/lib/directives/**/*.ts",
 		"../src/lib/services/**/*.ts",
