--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -50,9 +50,9 @@
     "@types/chai": "4.3.0",
     "@types/mocha": "9.1.0",
     "@types/node": "16.11.6",
-    "@types/selenium-webdriver": "4.0.20",
+    "@types/selenium-webdriver": "4.1.1",
     "chai": "4.3.6",
-    "chromedriver": "101.0.0",
+    "chromedriver": "103.0.0",
     "codelyzer": "6.0.2",
     "concat": "^1.0.3",
     "cross-env": "^7.0.3",
@@ -68,6 +68,7 @@
     "karma-junit-reporter": "2.0.1",
     "karma-mocha-reporter": "2.2.5",
     "karma-notify-reporter": "1.3.0",
+    "lorem-ipsum": "^2.0.8",
     "mocha": "9.2.2",
     "ng-packagr": "13.0.3",
     "selenium-webdriver": "4.2.0",
