--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -38,7 +38,8 @@
     "openvidu-browser": "^2.22.0",
     "rxjs": "7.5.4",
     "tslib": "2.3.1",
-    "zone.js": "0.11.4"
+    "zone.js": "0.11.4",
+    "lorem-ipsum": "^2.0.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "13.2.5",
@@ -68,7 +69,6 @@
     "karma-junit-reporter": "2.0.1",
     "karma-mocha-reporter": "2.2.5",
     "karma-notify-reporter": "1.3.0",
-    "lorem-ipsum": "^2.0.8",
     "mocha": "9.2.2",
     "ng-packagr": "13.0.3",
     "selenium-webdriver": "4.2.0",
