--- a/openvidu-server/deployments/ce/docker-compose/docker-compose.yml
+++ b/openvidu-server/deployments/ce/docker-compose/docker-compose.yml
@@ -107,6 +107,7 @@ services:
             - PROXY_HTTPS_PROTOCOLS=${HTTPS_PROTOCOLS:-}
             - PROXY_HTTPS_CIPHERS=${HTTPS_CIPHERS:-}
             - PROXY_HTTPS_HSTS=${HTTPS_HSTS:-}
+            - XFRAME_SAMEORIGIN=${XFRAME_SAMEORIGIN:-}
             - ALLOWED_ACCESS_TO_DASHBOARD=${ALLOWED_ACCESS_TO_DASHBOARD:-}
             - ALLOWED_ACCESS_TO_RESTAPI=${ALLOWED_ACCESS_TO_RESTAPI:-}
             - PROXY_MODE=CE
