openvidu-server: public URL to plain HTTP if DEV_CONTAINER

--- a/openvidu-server/src/main/resources/application-container.properties
+++ b/openvidu-server/src/main/resources/application-container.properties
@@ -1,3 +1,6 @@
+server.address=0.0.0.0
+server.ssl.enabled=false
+DEV_CONTAINER=true
 DOMAIN_OR_PUBLIC_IP=localhost
 OPENVIDU_SECRET=MY_SECRET
 HTTPS_PORT=4443
