--- a/.github/workflows/openvidu-ce-test.yml
+++ b/.github/workflows/openvidu-ce-test.yml
@@ -15,7 +15,7 @@ on:
       KURENTO_MEDIA_SERVER_IMAGE:
         description: 'Docker image of kurento-media-server'
         required: true
-        default: 'kurento/kurento-media-server:dev-6.18.0'
+        default: 'kurento/kurento-media-server:6.18.0'
       MEDIASOUP_CONTROLLER_VERSION:
         description: 'Tag of image openvidu/mediasoup-controller'
         required: true
@@ -54,7 +54,7 @@ jobs:
         - /opt/openvidu:/opt/openvidu
     env:
       KURENTO_SNAPSHOTS_URL: ${{ secrets.KURENTO_SNAPSHOTS_URL }}
-      KURENTO_MEDIA_SERVER_IMAGE: ${{ github.event.inputs.KURENTO_MEDIA_SERVER_IMAGE || 'kurento/kurento-media-server:dev-6.18.0' }}
+      KURENTO_MEDIA_SERVER_IMAGE: ${{ github.event.inputs.KURENTO_MEDIA_SERVER_IMAGE || 'kurento/kurento-media-server:6.18.0' }}
       MEDIASOUP_CONTROLLER_VERSION: ${{ github.event.inputs.MEDIASOUP_CONTROLLER_VERSION || 'master' }}
       KURENTO_JAVA_COMMIT: ${{ github.event.inputs.KURENTO_JAVA_COMMIT || 'master' }}
       DOCKER_RECORDING_VERSION: ${{ github.event.inputs.DOCKER_RECORDING_VERSION || 'default' }}
