Change to openvidu-server-kms to openvidu-dev

--- a/.github/workflows/openvidu-components-angular-E2E.yml
+++ b/.github/workflows/openvidu-components-angular-E2E.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         docker run -p 4443:4443 --rm -d \
         -e OPENVIDU_SECRET=MY_SECRET \
-        openvidu/openvidu-server-kms:latest
+        openvidu/openvidu-dev:latest
     - name: Build openvidu-browser
       run: |
         cd openvidu-browser
