--- a/openvidu-components-angular/projects/openvidu-angular/package.json
+++ b/openvidu-components-angular/projects/openvidu-angular/package.json
@@ -1,18 +1,18 @@
 {
-    "dependencies": {
-        "tslib": "^2.3.0"
-    }, 
-    "name": "openvidu-angular", 
-    "peerDependencies": {
-        "@angular/animations": "^13.0.0 || ^14.0.0", 
-        "@angular/common": "^13.0.0 || ^14.0.0", 
-        "@angular/core": "^13.0.0 || ^14.0.0", 
-        "@angular/flex-layout": "^13.0.0-beta.36 || ^14.0.0-beta.40", 
-        "@angular/forms": "^13.0.0 || ^14.0.0", 
-        "@angular/material": "^13.0.0 || ^14.0.0", 
-        "autolinker": ">=3.14.3", 
-        "buffer": "^6.0.3", 
-        "openvidu-browser": "2.23.0"
-    }, 
-    "version": "2.23.0"
+  "name": "openvidu-angular",
+  "version": "2.22.0",
+  "peerDependencies": {
+    "@angular/animations": "^13.0.0",
+    "@angular/common": "^13.0.0",
+    "@angular/core": "^13.0.0",
+    "@angular/material": "^13.0.0",
+    "@angular/forms": "^13.0.0",
+    "@angular/flex-layout": "^13.0.0-beta.36",
+    "autolinker": "^3.14.3",
+    "buffer": "^6.0.3",
+    "openvidu-browser": "2.22.0"
+  },
+  "dependencies": {
+    "tslib": "^2.3.0"
+  }
 }
