--- a/.github/workflows/openvidu-components-angular-E2E.yml
+++ b/.github/workflows/openvidu-components-angular-E2E.yml
@@ -15,11 +15,21 @@ jobs:
   openvidu_angular_e2e:
     name: E2E tests
     runs-on: ubuntu-latest
+    env:
+      OPENVIDU_DISPATCH_EVENT_GA: ${{ secrets.OPENVIDU_DISPATCH_EVENT_GA }}
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v2
       with:
         node-version: '16'
+    - name: Send repository dispatch event
+      run: |
+        curl \
+        -X POST \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${OPENVIDU_DISPATCH_EVENT_GA}" \
+        https://api.github.com/repos/OpenVidu/openvidu-call/dispatches \
+        -d '{"event_type":"on-demand-e2e-test"}'
     - name: Run Selenium Chromedriver
       run: docker run -d --shm-size="2g" --network host selenium/standalone-chrome:104.0
     - name: Run openvidu-server-kms
