--- a/.github/workflows/openvidu-components-angular-E2E.yml
+++ b/.github/workflows/openvidu-components-angular-E2E.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         gh api repos/OpenVidu/openvidu-call/dispatches \
         -f event_type='openvidu-components-angular' \
-        -F client_payload='{"commit-message": "${{ github.event.head_commit.message:-Manually run }}","commit-ref": "${{ github.event.head_commit.sha:-Manually run }}"}'
+        -F client_payload={"commit-message": "${{ github.event.head_commit.message || 'Manually run' }}"}
     - name: Run Selenium Chromedriver
       run: docker run -d --shm-size="2g" --network host selenium/standalone-chrome:104.0
     - name: Run openvidu-server-kms
