--- a/.github/workflows/openvidu-components-angular-E2E.yml
+++ b/.github/workflows/openvidu-components-angular-E2E.yml
@@ -25,14 +25,14 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.OPENVIDU_DISPATCH_EVENT_GA }}
         COMMIT_MESSAGE: ${{ github.event.head_commit.message || 'Manually' }}
-        COMMIT_SHA: ${{ github.event.head_commit.sha || 'Manually' }}
+        COMMIT_URL: ${{ github.event.commits[0].url || 'Manually' }}
       run: |
         curl \
         -X POST \
         -H "Accept: application/vnd.github+json" \
         -H "Authorization: Bearer ${GITHUB_TOKEN}" \
         https://api.github.com/repos/OpenVidu/openvidu-call/dispatches \
-        -d '{"event_type":"openvidu-components-angular","client_payload":{"commit-message":"'$COMMIT_MESSAGE'","commit-ref":"'$COMMIT_SHA'"}}'
+        -d '{"event_type":"openvidu-components-angular","client_payload":{"commit-message":"'"$COMMIT_MESSAGE"'","commit-ref":"'"$COMMIT_URL"'"}}'
     - name: Run Selenium Chromedriver
       run: docker run -d --shm-size="2g" --network host selenium/standalone-chrome:104.0
     - name: Run openvidu-server-kms
