--- a/.github/workflows/openvidu-components-angular-E2E.yml
+++ b/.github/workflows/openvidu-components-angular-E2E.yml
@@ -58,8 +58,8 @@ jobs:
       with:
         name: openvidu-browser
         path: openvidu-components-angular
-    - name: Run Selenium Chromedriver
-      run: docker run -d --shm-size="2g" --network host selenium/standalone-chrome:106.0
+    - name: Run Browserless Chrome
+      run: docker run -d -p 3000:3000 --network host browserless/chrome:1.53-chrome-stable
     - name: Run openvidu-server-kms
       run: |
         docker run -p 4443:4443 --rm -d \
@@ -91,8 +91,8 @@ jobs:
       with:
         name: openvidu-browser
         path: openvidu-components-angular
-    - name: Run Selenium Chromedriver
-      run: docker run -d --shm-size="4g" --network host selenium/standalone-chrome:106.0
+    - name: Run Browserless Chrome
+      run: docker run -d -p 3000:3000 --network host browserless/chrome:1.53-chrome-stable
     - name: Run openvidu-server-kms
       run: |
         docker run -p 4443:4443 --rm -d \
