--- a/openvidu-test-e2e/pom.xml
+++ b/openvidu-test-e2e/pom.xml
@@ -123,6 +123,11 @@
 			<artifactId>testcontainers</artifactId>
 			<version>${version.testcontainers}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>${version.commons-text}</version>
+		</dependency>
 	</dependencies>
 
 </project>
