--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -11,7 +11,7 @@
 		"@angular/platform-browser-dynamic": "13.3.9",
 		"@angular/router": "13.3.9",
 		"autolinker": "3.14.3",
-		"lorem-ipsum": "^2.0.8",
+		"openvidu-browser": "file:openvidu-browser-2.23.0.tgz",
 		"openvidu-browser": "2.23.0",
 		"rxjs": "7.5.6",
 		"tslib": "2.3.1",
