deployment: Add speech to text service

--- a/openvidu-server/deployments/pro/docker-compose/media-node/beats/filebeat.yml
+++ b/openvidu-server/deployments/pro/docker-compose/media-node/beats/filebeat.yml
@@ -49,6 +49,10 @@ output:
         when.or:
           - contains:
               container.image.name: openvidu/openvidu-recording
+      - index: "filebeat-speech-to-text-%{+yyyy.MM.dd}"
+        when.or:
+          - contains:
+              container.image.name: openvidu/speech-to-text-service
     pipelines:
       - pipeline: kurento-pipeline
         when.or:
