--- a/openvidu-server/deployments/pro/docker-compose/media-node/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/media-node/docker-compose.yml
@@ -28,6 +28,7 @@ services:
             - FILEBEAT_IMAGE=docker.elastic.co/beats/filebeat-oss:7.8.0
             - OPENVIDU_RECORDING_IMAGE=openvidu/openvidu-recording:2.23.0
             - COTURN_IMAGE=openvidu/openvidu-coturn:2.23.0
+            - SPEECH_TO_TEXT_IMAGE=openvidu/speech-to-text-service:2.24.0-beta1
             - NO_COLOR=true
         ports:
             - 3000:3000
