deployment: Typo - Add service to 'speech-to-text' docker image name

--- a/openvidu-server/deployments/pro/docker-compose/mono-node/beats/filebeat.yml
+++ b/openvidu-server/deployments/pro/docker-compose/mono-node/beats/filebeat.yml
@@ -76,7 +76,7 @@ output:
       - index: "filebeat-speech-to-text-%{+yyyy.MM.dd}"
         when.or:
           - contains:
-              container.image.name: openvidu/speech-to-text
+              container.image.name: openvidu/speech-to-text-service
     pipelines:
       - pipeline: kurento-pipeline
         when.or:
