--- a/openvidu-components-angular/projects/openvidu-angular/tsconfig.lib.json
+++ b/openvidu-components-angular/projects/openvidu-angular/tsconfig.lib.json
@@ -7,6 +7,7 @@
     "declarationMap": true,
     "inlineSources": true,
     "resolveJsonModule": true,
+    "moduleResolution": "node",
     "types": []
   },
   "exclude": [
