--- a/openvidu-components-angular/projects/openvidu-angular/package.json
+++ b/openvidu-components-angular/projects/openvidu-angular/package.json
@@ -2,13 +2,13 @@
   "name": "openvidu-angular",
   "version": "2.23.1",
   "peerDependencies": {
-    "@angular/animations": "^13.0.0",
-    "@angular/common": "^13.0.0",
-    "@angular/core": "^13.0.0",
-    "@angular/material": "^13.0.0",
-    "@angular/forms": "^13.0.0",
-    "@angular/flex-layout": "^13.0.0-beta.36",
-    "autolinker": "^3.14.3",
+    "@angular/animations": "^13.0.0 || ^14.0.0",
+    "@angular/common": "^13.0.0 || ^14.0.0",
+    "@angular/core": "^13.0.0 || ^14.0.0",
+    "@angular/material": "^13.0.0 || ^14.0.0",
+    "@angular/forms": "^13.0.0 || ^14.0.0",
+    "@angular/flex-layout": "^13.0.0-beta.36 || ^14.0.0-beta.40",
+    "autolinker": "^4.0.0",
     "buffer": "^6.0.3",
     "openvidu-browser": "2.23.0"
   },
