deployment: Speech to text properties added to .env

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -162,6 +162,24 @@ OPENVIDU_PRO_CLUSTER_LOAD_STRATEGY=streams
 #OPENVIDU_PRO_ELASTICSEARCH_HOST=
 #OPENVIDU_PRO_KIBANA_HOST=
 
+# Speech To Text service module to be enabled. Can be: [disabled, vosk, azure]
+# Default is disabled
+# OPENVIDU_PRO_SPEECH_TO_TEXT=disabled
+
+# Speech To Text service module Docker image to be used in media nodes
+# This parameters is empty by default, because the default image is the one provided by OpenVidu
+# If defined, it will override the default image
+# OPENVIDU_PRO_SPEECH_TO_TEXT_IMAGE=
+
+# If OPENVIDU_PRO_SPEECH_TO_TEXT=azure, Azure key for the Speech To Text service.
+# See https://azure.microsoft.com/en-us/products/cognitive-services/speech-to-text/
+# OPENVIDU_PRO_SPEECH_TO_TEXT_AZURE_KEY=
+
+# If OPENVIDU_PRO_SPEECH_TO_TEXT=azure, Azure region in which the Speech To Text service is located (e.g. 'westeurope').
+# Default value is westeurope
+# See https://azure.microsoft.com/en-us/products/cognitive-services/speech-to-text/"
+# OPENVIDU_PRO_SPEECH_TO_TEXT_AZURE_REGION=
+
 # Where to store recording files. Can be 'local' (local storage) or 's3' (AWS bucket).
 # You will need to define a OPENVIDU_PRO_AWS_S3_BUCKET if you use it.
 #OPENVIDU_PRO_RECORDING_STORAGE=
