deployment: Fix some typos of speech to text parameters at .env files

--- a/openvidu-server/deployments/enterprise/master-node/.env
+++ b/openvidu-server/deployments/enterprise/master-node/.env
@@ -170,7 +170,7 @@ OPENVIDU_PRO_CLUSTER_LOAD_STRATEGY=streams
 # OPENVIDU_PRO_SPEECH_TO_TEXT=disabled
 
 # Speech To Text service module Docker image to be used in media nodes
-# This parameters is empty by default, because the default image is the one provided by OpenVidu
+# This parameter is empty by default, because the default image is the one provided by OpenVidu
 # If defined, it will override the default image
 # OPENVIDU_PRO_SPEECH_TO_TEXT_IMAGE=
 
@@ -179,7 +179,7 @@ OPENVIDU_PRO_CLUSTER_LOAD_STRATEGY=streams
 # OPENVIDU_PRO_SPEECH_TO_TEXT_AZURE_KEY=
 
 # If OPENVIDU_PRO_SPEECH_TO_TEXT=azure, Azure region in which the Speech To Text service is located (e.g. 'westeurope').
-# Default value is westeurope
+# Default value is empty
 # See https://azure.microsoft.com/en-us/products/cognitive-services/speech-to-text/"
 # OPENVIDU_PRO_SPEECH_TO_TEXT_AZURE_REGION=
 
