openvidu-components: Updated testapp

--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -67,8 +67,7 @@
     "lib:serve": "ng build openvidu-angular --watch",
     "lib:test": "ng test openvidu-angular --no-watch --code-coverage",
     "lint": "ng lint",
-    "ng": "ng",
-    "start": "ng serve --ssl --configuration development",
+    "start": "ng serve --configuration development",
     "start-prod": "npx http-server ./dist/openvidu-components-testapp/ --port 4200",
     "webcomponent:build": "./node_modules/@angular/cli/bin/ng.js build openvidu-webcomponent --configuration production && node ./openvidu-webcomponent-build.js",
     "webcomponent:e2e": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/webcomponent.test.js",
