openvidu-server: simplify STT operations with single a connectionId

--- a/openvidu-test-e2e/pom.xml
+++ b/openvidu-test-e2e/pom.xml
@@ -124,9 +124,9 @@
 			<version>${version.testcontainers}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-text</artifactId>
-			<version>${version.commons-text}</version>
+			<groupId>info.debatty</groupId>
+			<artifactId>java-string-similarity</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 	</dependencies>
 
