deployment: Nginx security improvements: - Disable TLSv1.0 and TLSv1.1 by default. - Use intermediate SSL ciphers following mozilla SSL generator: https://ssl-config.mozilla.org/#server=nginx&version=1.23.1&config=intermediate&openssl=1.1.1&guideline=5.6 - Enable HSTS by default

--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/ssl_config.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/ssl_config.conf
@@ -10,7 +10,6 @@
 
     ssl_protocols {ssl_protocols};
     ssl_ciphers "{ssl_ciphers}";
-
-    ssl_prefer_server_ciphers on;
+    ssl_prefer_server_ciphers off;
 
     add_header Strict-Transport-Security "{add_header_hsts}" always;
