--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -68,6 +68,7 @@
     "lib:test": "ng test openvidu-angular --no-watch --code-coverage",
     "lint": "ng lint",
     "start": "ng serve --configuration development",
+    "start:ssl": "ng serve --ssl --configuration development --host 0.0.0.0 --port 4200 --ssl-cert /path/to/cert.pem --ssl-key /path/to/key.pem",
     "start-prod": "npx http-server ./dist/openvidu-components-testapp/ --port 4200",
     "webcomponent:build": "./node_modules/@angular/cli/bin/ng.js build openvidu-webcomponent --configuration production && node ./openvidu-webcomponent-build.js",
     "webcomponent:e2e": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/webcomponent.test.js",
