deployment: Open port 4000. Update speech to text AMI

--- a/openvidu-server/deployments/pro/aws/cfn-mkt-kms-ami.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-mkt-kms-ami.yaml.template
@@ -94,6 +94,7 @@ Resources:
                   # Environment variables from docker-compose.yml
                   sed -i "s|MEDIASOUP_IMAGE=openvidu/mediasoup-controller.*|MEDIASOUP_IMAGE=openvidu/mediasoup-controller:master|g" docker-compose.yml
                   sed -i "s|COTURN_IMAGE=openvidu/openvidu-coturn.*|COTURN_IMAGE=openvidu/openvidu-coturn:master|g" docker-compose.yml
+                  sed -i "s|SPEECH_TO_TEXT_IMAGE=openvidu/speech-to-text-service.*|SPEECH_TO_TEXT_IMAGE=openvidu/speech-to-text-service:master|g" docker-compose.yml
                   popd
                 fi
 
